Fix(Login): Modify z-index error in login modal

--- a/frontend/src/scss/fullcare.css
+++ b/frontend/src/scss/fullcare.css
@@ -121,6 +121,7 @@ input {
   top: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
 }
 .login-modal-wrapper .login-modal {
   border-radius: 20px;
