--- a/frontend/src/scss/import/_login.scss
+++ b/frontend/src/scss/import/_login.scss
@@ -6,6 +6,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    z-index: 1;
 
     .login-modal {
         border-radius: 20px;
